phi.peg

start
  = Program

__
  = ([\t\v\f \u00A0\uFEFF\n\r\u2028\u2029])*
  
  
Literal
  = 'a'
  
HashItem
  = key:Expr __ ":" __ val:Expr {
    return { type: 'HashItem', key: key, val: val };
  }
  
Hash
  = "{" pairs:( __ HashItem __ ";" )* __ "}" {
    return { type: "Hash", pairs: pairs };
  }
  
Expr
  = Hash
  / Literal
  
  
Program
  = 'asdf'
